# gcp

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.ps1  clippy.toml  justfile
.cargo/: config.toml
scripts/: build-upx.ps1  size-compare.ps1  size.ps1  test_configs.ps1  test_configs.sh  upx-only.ps1
src/: base64.rs  client.rs  downloader.rs  error.rs  github.rs  lib.rs  main.rs
src/downloader/: file.rs  folder.rs  mod.rs  progress.rs
src/filesystem/: mod.rs  utils.rs  writer.rs
src/github/: auth.rs  client.rs  mod.rs  types.rs
tests/integration/: end_to_end_tests.rs  github_api_tests.rs
tests/unit/: auth_tests.rs  downloader_tests.rs  filesystem_tests.rs
