[package]
name = "gcp-minimal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gcp"
path = "src/main.rs"

[dependencies]
# Minimal dependencies for maximal size reduction
url = { version = "2.5", default-features = false, features = ["serde"] }
ureq = { version = "2.9", default-features = false, features = ["json"] }

# Minimal serde support
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

# Essential utilities only
base64 = { version = "0.22", default-features = false }

# No heavy dependencies: removed tokio, reqwest, octocrab, clap, thiserror, chrono, tracing, etc.

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"
overflow-checks = false
strip = true