[package]
name = "gcp"
version = "0.1.0"
edition = "2024"

[dependencies]
# 使用更轻量的 HTTP 客户端，添加最小 TLS 支持
attohttpc = { version = "0.30.1", default-features = false, features = ["tls"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
wee_alloc = { version = "0.4", default-features = false }
[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true              # 链接时优化
panic = "abort"         # 禁用栈展开
codegen-units = 1       # 减少代码生成单元提高优化
strip = "symbols"       # 剥离所有符号
opt-level = "z"         # 优化大小
overflow-checks = false # 禁用溢出检查
debug = false           # 禁用调试信息
debug-assertions = false # 禁用调试断言
incremental = false     # 禁用增量编译
rpath = false           # 禁用 rpath

# 极致优化配置
[profile.release.package."*"]
codegen-units = 1       # 所有包都使用单个代码生成单元
